--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
 # Editor configuration, see https://editorconfig.org
+# Hay que tener instalado la extension Editorconfig for VSCode
 root = true
 
 [*]
